--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "^29.5.12",
     "@types/pg": "^8.11.6",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.4",
     "ts-jest": "^29.2.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
